# nn

./: .gitignore  README.md  digit_recognizer.ipynb  embeddings.ipynb  go.mod  main.ipynb  mnist.ipynb  nn.code-workspace  predict_deterministic_distribution.ipynb  pyproject.toml  ratings.ipynb  spam.ipynb  student_scores.ipynb  tensor.ipynb  titanic.ipynb  titanic2.ipynb
depthwise/: main.go
dogs/: dogs.ipynb
fashionmnist/: fashionmnist.ipynb  fashionmnistcnn.ipynb  fashionmnistmlp.ipynb  helper.py
kerastutorial/: tutorial.ipynb
loans/: loans.ipynb  loans_gpt.ipynb  loans_keras.ipynb
mnist/: cnn_keras.ipynb  cnn_keras_test.py  digit_recognizer.ipynb  mnist.ipynb  mnist_keras.ipynb  mnistgpt.ipynb  mnistmar1.ipynb
playground/: buildingnn.ipynb  predict_deterministic_distribution.ipynb  test_embeddings.py
ratings/: ratings.ipynb
studentscores/: student_scores.ipynb
titanic/: titanic.ipynb
