[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "pandas>=3.0.1",
    "pandas-profiling>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchview>=0.2.7",
    "torchvision>=0.25.0",
    "torchviz>=0.0.3",
    "widgetsnbextension>=4.0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
